Sun Aug 17  8:45:30 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* gnubg.c - fix overwrite of buffer in CommandSaveSettings
	
Sun Aug 17  0:44:16 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* play.c - put if(fX) around 3d board code (seg faulted on
	  starting game in text mode
	* board3d/gtkcolour.c - needs string.h
	
Sat Aug 16 11:24:24 2003  Joern Thyssen  <jth@gnubg.org>

        * analysis.c: include only finished games in luck adj.

Sat Aug 16 11:05:45 2003  Joern Thyssen  <jth@gnubg.org>

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): show actual and luck adj. result
	relative instead of absolute.
	(suggested by Chris D. Yep)

Sat Aug 16 10:43:32 2003  Joern Thyssen  <jth@gnubg.org>

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): show FIBS rating difference instead
	of relative FIBS rating.
	(suggested by Kees van den Doel)
        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): show only relative fibs rating
	for the entire match
	(suggested by Chris D. Yep)

Sat Aug 16  7:19:27 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* gtkchequer.c - empty string instead of null caused errors
	  in sizing hint and annotation windows
	
Fri Aug 15 19:56:24 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* po/it.po more translations from Renzo Campagna
	
Fri Aug 15 21:01:48 2003  Oystein Johansen  <oystein@gnubg.org>

	* gtkoptions.c: Set seed with a spinbox directly, instead of
	clicking a button and then operate a spinbox.

Fri Aug 15 17:01:48 2003  Joern Thyssen  <jth@gnubg.org>

	* dice.c (RollDice): use high bits of RNGs to generate dice.
	(reported by Michael Petch)

Fri Aug 15 16:42:02 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (ComputerTurn, CommandExternal): fix logic
	for resignations.

Fri Aug 15 11:36:41 2003  Joseph Heled  <pepster@users.sourceforge.net>
