@@ -1,3 +1,7 @@
+Sun Aug 17 12:15:31 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gnubgmodule.c: remove C++ style variable decl. inside code.
+
 Sun Aug 17  8:45:30 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>
 
 	* gnubg.c - fix overwrite of buffer in CommandSaveSettings
